src/yacc.output
Terminals which are not used

   OR
   '+'
   '-'
   '/'


Grammar

    0 $accept: stmt_list $end

    1 stmt_list: stmt
    2          | stmt_list stmt

    3 stmt: QUIT CMD_FINISH
    4     | EXECFILE FILENAME CMD_FINISH
    5     | sql_list CMD_FINISH
    6     | sql_list ';' error_statment CMD_FINISH
    7     | sql_list error_statment CMD_FINISH
    8     | error_statment CMD_FINISH

    9 sql_list: sql
   10         | sql_list ';' sql

   11 sql: create
   12    | drop
   13    | select
   14    | insert
   15    | delete
   16    | display

   17 create: CREATE TABLE table_name '(' create_table_element_list ')'
   18       | CREATE INDEX index_name ON table_name '(' column_name ')'

   19 table_name: NAME

   20 index_name: NAME

   21 column_name: NAME

   22 create_table_element_list: create_table_element
   23                          | create_table_element_list ',' create_table_element

   24 create_table_element: column_def
   25                     | table_constraint_def

   26 column_def: NAME data_type column_def_opt

   27 data_type: CHAR
   28          | CHAR '(' NUMBER ')'
   29          | INTEGER
   30          | FLOAT INTEGER

   31 column_def_opt: /* empty */
   32               | PRIMARY KEY
   33               | UNIQUE

   34 table_constraint_def: PRIMARY KEY '(' NAME ')'

   35 drop: DROP TABLE table_name
   36     | DROP INDEX index_name

   37 select: SELECT '*' FROM table_name opt_where

   38 opt_where: /* empty */
   39          | WHERE expr_list

   40 expr_list: expr AND expr

   41 expr: column_value comparison column_name
   42     | column_name comparison column_value

   43 comparison: EQ
   44           | NEQ
   45           | LT
   46           | GT
   47           | LE
   48           | GE

   49 insert: INSERT INTO table_name VALUES insert_val_list

   50 insert_val_list: '(' column_value_list ')'
   51                | insert_val_list ',' '(' column_value_list ')'

   52 column_value_list: column_value
   53                  | column_value_list ',' column_value

   54 column_value: STRING
   55             | NUMBER

   56 delete: DELETE FROM table_name opt_where

   57 display: show_tables

   58 show_tables: SHOW TABLES_IN_SHOW

   59 error_statment: error
   60               | ERRORTOKEN


Terminals, with rules where they appear

$end (0) 0
'(' (40) 17 18 28 34 50 51
')' (41) 17 18 28 34 50 51
'*' (42) 37
'+' (43)
',' (44) 23 51 53
'-' (45)
'/' (47)
';' (59) 6 10
error (256) 59
FILENAME (258) 4
NUMBER (259) 28 55
NAME (260) 19 20 21 26 34
STRING (261) 54
AND (262) 40
CHAR (263) 27 28
CMD_FINISH (264) 3 4 5 6 7 8
CREATE (265) 17 18
DELETE (266) 56
DROP (267) 35 36
ERRORTOKEN (268) 60
EXECFILE (269) 4
FLOAT (270) 30
FROM (271) 37 56
INDEX (272) 18 36
INSERT (273) 49
INTEGER (274) 29 30
INTO (275) 49
KEY (276) 32 34
ON (277) 18
OR (278)
PRIMARY (279) 32 34
SHOW (280) 58
SELECT (281) 37
TABLE (282) 17 35
TABLES_IN_SHOW (283) 58
UNIQUE (284) 33
VALUES (285) 49
QUIT (286) 3
WHERE (287) 39
EQ (288) 43
NEQ (289) 44
LT (290) 45
GT (291) 46
LE (292) 47
GE (293) 48


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
stmt_list (48)
    on left: 1 2, on right: 0 2
stmt (49)
    on left: 3 4 5 6 7 8, on right: 1 2
sql_list (50)
    on left: 9 10, on right: 5 6 7 10
sql (51)
    on left: 11 12 13 14 15 16, on right: 9 10
create (52)
    on left: 17 18, on right: 11
table_name (53)
    on left: 19, on right: 17 18 35 37 49 56
index_name (54)
    on left: 20, on right: 18 36
column_name (55)
    on left: 21, on right: 18 41 42
create_table_element_list (56)
    on left: 22 23, on right: 17 23
create_table_element (57)
    on left: 24 25, on right: 22 23
column_def (58)
    on left: 26, on right: 24
data_type (59)
    on left: 27 28 29 30, on right: 26
column_def_opt (60)
    on left: 31 32 33, on right: 26
table_constraint_def (61)
    on left: 34, on right: 25
drop (62)
    on left: 35 36, on right: 12
select (63)
    on left: 37, on right: 13
opt_where (64)
    on left: 38 39, on right: 37 56
expr_list (65)
    on left: 40, on right: 39
expr (66)
    on left: 41 42, on right: 40
comparison (67)
    on left: 43 44 45 46 47 48, on right: 41 42
insert (68)
    on left: 49, on right: 14
insert_val_list (69)
    on left: 50 51, on right: 49 51
column_value_list (70)
    on left: 52 53, on right: 50 51 53
column_value (71)
    on left: 54 55, on right: 41 42 52 53
delete (72)
    on left: 56, on right: 15
display (73)
    on left: 57, on right: 16
show_tables (74)
    on left: 58, on right: 57
error_statment (75)
    on left: 59 60, on right: 6 7 8


state 0

    0 $accept: . stmt_list $end

    error       shift, and go to state 1
    CREATE      shift, and go to state 2
    DELETE      shift, and go to state 3
    DROP        shift, and go to state 4
    ERRORTOKEN  shift, and go to state 5
    EXECFILE    shift, and go to state 6
    INSERT      shift, and go to state 7
    SHOW        shift, and go to state 8
    SELECT      shift, and go to state 9
    QUIT        shift, and go to state 10

    stmt_list       go to state 11
    stmt            go to state 12
    sql_list        go to state 13
    sql             go to state 14
    create          go to state 15
    drop            go to state 16
    select          go to state 17
    insert          go to state 18
    delete          go to state 19
    display         go to state 20
    show_tables     go to state 21
    error_statment  go to state 22


state 1

   59 error_statment: error .

    $default  reduce using rule 59 (error_statment)


state 2

   17 create: CREATE . TABLE table_name '(' create_table_element_list ')'
   18       | CREATE . INDEX index_name ON table_name '(' column_name ')'

    INDEX  shift, and go to state 23
    TABLE  shift, and go to state 24


state 3

   56 delete: DELETE . FROM table_name opt_where

    FROM  shift, and go to state 25


state 4

   35 drop: DROP . TABLE table_name
   36     | DROP . INDEX index_name

    INDEX  shift, and go to state 26
    TABLE  shift, and go to state 27


state 5

   60 error_statment: ERRORTOKEN .

    $default  reduce using rule 60 (error_statment)


state 6

    4 stmt: EXECFILE . FILENAME CMD_FINISH

    FILENAME  shift, and go to state 28


state 7

   49 insert: INSERT . INTO table_name VALUES insert_val_list

    INTO  shift, and go to state 29


state 8

   58 show_tables: SHOW . TABLES_IN_SHOW

    TABLES_IN_SHOW  shift, and go to state 30


state 9

   37 select: SELECT . '*' FROM table_name opt_where

    '*'  shift, and go to state 31


state 10

    3 stmt: QUIT . CMD_FINISH

    CMD_FINISH  shift, and go to state 32


state 11

    0 $accept: stmt_list . $end
    2 stmt_list: stmt_list . stmt

    $end        shift, and go to state 33
    error       shift, and go to state 1
    CREATE      shift, and go to state 2
    DELETE      shift, and go to state 3
    DROP        shift, and go to state 4
    ERRORTOKEN  shift, and go to state 5
    EXECFILE    shift, and go to state 6
    INSERT      shift, and go to state 7
    SHOW        shift, and go to state 8
    SELECT      shift, and go to state 9
    QUIT        shift, and go to state 10

    stmt            go to state 34
    sql_list        go to state 13
    sql             go to state 14
    create          go to state 15
    drop            go to state 16
    select          go to state 17
    insert          go to state 18
    delete          go to state 19
    display         go to state 20
    show_tables     go to state 21
    error_statment  go to state 22


state 12

    1 stmt_list: stmt .

    $default  reduce using rule 1 (stmt_list)


state 13

    5 stmt: sql_list . CMD_FINISH
    6     | sql_list . ';' error_statment CMD_FINISH
    7     | sql_list . error_statment CMD_FINISH
   10 sql_list: sql_list . ';' sql

    error       shift, and go to state 1
    CMD_FINISH  shift, and go to state 35
    ERRORTOKEN  shift, and go to state 5
    ';'         shift, and go to state 36

    error_statment  go to state 37


state 14

    9 sql_list: sql .

    $default  reduce using rule 9 (sql_list)


state 15

   11 sql: create .

    $default  reduce using rule 11 (sql)


state 16

   12 sql: drop .

    $default  reduce using rule 12 (sql)


state 17

   13 sql: select .

    $default  reduce using rule 13 (sql)


state 18

   14 sql: insert .

    $default  reduce using rule 14 (sql)


state 19

   15 sql: delete .

    $default  reduce using rule 15 (sql)


state 20

   16 sql: display .

    $default  reduce using rule 16 (sql)


state 21

   57 display: show_tables .

    $default  reduce using rule 57 (display)


state 22

    8 stmt: error_statment . CMD_FINISH

    CMD_FINISH  shift, and go to state 38


state 23

   18 create: CREATE INDEX . index_name ON table_name '(' column_name ')'

    NAME  shift, and go to state 39

    index_name  go to state 40


state 24

   17 create: CREATE TABLE . table_name '(' create_table_element_list ')'

    NAME  shift, and go to state 41

    table_name  go to state 42


state 25

   56 delete: DELETE FROM . table_name opt_where

    NAME  shift, and go to state 41

    table_name  go to state 43


state 26

   36 drop: DROP INDEX . index_name

    NAME  shift, and go to state 39

    index_name  go to state 44


state 27

   35 drop: DROP TABLE . table_name

    NAME  shift, and go to state 41

    table_name  go to state 45


state 28

    4 stmt: EXECFILE FILENAME . CMD_FINISH

    CMD_FINISH  shift, and go to state 46


state 29

   49 insert: INSERT INTO . table_name VALUES insert_val_list

    NAME  shift, and go to state 41

    table_name  go to state 47


state 30

   58 show_tables: SHOW TABLES_IN_SHOW .

    $default  reduce using rule 58 (show_tables)


state 31

   37 select: SELECT '*' . FROM table_name opt_where

    FROM  shift, and go to state 48


state 32

    3 stmt: QUIT CMD_FINISH .

    $default  reduce using rule 3 (stmt)


state 33

    0 $accept: stmt_list $end .

    $default  accept


state 34

    2 stmt_list: stmt_list stmt .

    $default  reduce using rule 2 (stmt_list)


state 35

    5 stmt: sql_list CMD_FINISH .

    $default  reduce using rule 5 (stmt)


state 36

    6 stmt: sql_list ';' . error_statment CMD_FINISH
   10 sql_list: sql_list ';' . sql

    error       shift, and go to state 1
    CREATE      shift, and go to state 2
    DELETE      shift, and go to state 3
    DROP        shift, and go to state 4
    ERRORTOKEN  shift, and go to state 5
    INSERT      shift, and go to state 7
    SHOW        shift, and go to state 8
    SELECT      shift, and go to state 9

    sql             go to state 49
    create          go to state 15
    drop            go to state 16
    select          go to state 17
    insert          go to state 18
    delete          go to state 19
    display         go to state 20
    show_tables     go to state 21
    error_statment  go to state 50


state 37

    7 stmt: sql_list error_statment . CMD_FINISH

    CMD_FINISH  shift, and go to state 51


state 38

    8 stmt: error_statment CMD_FINISH .

    $default  reduce using rule 8 (stmt)


state 39

   20 index_name: NAME .

    $default  reduce using rule 20 (index_name)


state 40

   18 create: CREATE INDEX index_name . ON table_name '(' column_name ')'

    ON  shift, and go to state 52


state 41

   19 table_name: NAME .

    $default  reduce using rule 19 (table_name)


state 42

   17 create: CREATE TABLE table_name . '(' create_table_element_list ')'

    '('  shift, and go to state 53


state 43

   56 delete: DELETE FROM table_name . opt_where

    WHERE  shift, and go to state 54

    $default  reduce using rule 38 (opt_where)

    opt_where  go to state 55


state 44

   36 drop: DROP INDEX index_name .

    $default  reduce using rule 36 (drop)


state 45

   35 drop: DROP TABLE table_name .

    $default  reduce using rule 35 (drop)


state 46

    4 stmt: EXECFILE FILENAME CMD_FINISH .

    $default  reduce using rule 4 (stmt)


state 47

   49 insert: INSERT INTO table_name . VALUES insert_val_list

    VALUES  shift, and go to state 56


state 48

   37 select: SELECT '*' FROM . table_name opt_where

    NAME  shift, and go to state 41

    table_name  go to state 57


state 49

   10 sql_list: sql_list ';' sql .

    $default  reduce using rule 10 (sql_list)


state 50

    6 stmt: sql_list ';' error_statment . CMD_FINISH

    CMD_FINISH  shift, and go to state 58


state 51

    7 stmt: sql_list error_statment CMD_FINISH .

    $default  reduce using rule 7 (stmt)


state 52

   18 create: CREATE INDEX index_name ON . table_name '(' column_name ')'

    NAME  shift, and go to state 41

    table_name  go to state 59


state 53

   17 create: CREATE TABLE table_name '(' . create_table_element_list ')'

    NAME     shift, and go to state 60
    PRIMARY  shift, and go to state 61

    create_table_element_list  go to state 62
    create_table_element       go to state 63
    column_def                 go to state 64
    table_constraint_def       go to state 65


state 54

   39 opt_where: WHERE . expr_list

    NUMBER  shift, and go to state 66
    NAME    shift, and go to state 67
    STRING  shift, and go to state 68

    column_name   go to state 69
    expr_list     go to state 70
    expr          go to state 71
    column_value  go to state 72


state 55

   56 delete: DELETE FROM table_name opt_where .

    $default  reduce using rule 56 (delete)


state 56

   49 insert: INSERT INTO table_name VALUES . insert_val_list

    '('  shift, and go to state 73

    insert_val_list  go to state 74


state 57

   37 select: SELECT '*' FROM table_name . opt_where

    WHERE  shift, and go to state 54

    $default  reduce using rule 38 (opt_where)

    opt_where  go to state 75


state 58

    6 stmt: sql_list ';' error_statment CMD_FINISH .

    $default  reduce using rule 6 (stmt)


state 59

   18 create: CREATE INDEX index_name ON table_name . '(' column_name ')'

    '('  shift, and go to state 76


state 60

   26 column_def: NAME . data_type column_def_opt

    CHAR     shift, and go to state 77
    FLOAT    shift, and go to state 78
    INTEGER  shift, and go to state 79

    data_type  go to state 80


state 61

   34 table_constraint_def: PRIMARY . KEY '(' NAME ')'

    KEY  shift, and go to state 81


state 62

   17 create: CREATE TABLE table_name '(' create_table_element_list . ')'
   23 create_table_element_list: create_table_element_list . ',' create_table_element

    ')'  shift, and go to state 82
    ','  shift, and go to state 83


state 63

   22 create_table_element_list: create_table_element .

    $default  reduce using rule 22 (create_table_element_list)


state 64

   24 create_table_element: column_def .

    $default  reduce using rule 24 (create_table_element)


state 65

   25 create_table_element: table_constraint_def .

    $default  reduce using rule 25 (create_table_element)


state 66

   55 column_value: NUMBER .

    $default  reduce using rule 55 (column_value)


state 67

   21 column_name: NAME .

    $default  reduce using rule 21 (column_name)


state 68

   54 column_value: STRING .

    $default  reduce using rule 54 (column_value)


state 69

   42 expr: column_name . comparison column_value

    EQ   shift, and go to state 84
    NEQ  shift, and go to state 85
    LT   shift, and go to state 86
    GT   shift, and go to state 87
    LE   shift, and go to state 88
    GE   shift, and go to state 89

    comparison  go to state 90


state 70

   39 opt_where: WHERE expr_list .

    $default  reduce using rule 39 (opt_where)


state 71

   40 expr_list: expr . AND expr

    AND  shift, and go to state 91


state 72

   41 expr: column_value . comparison column_name

    EQ   shift, and go to state 84
    NEQ  shift, and go to state 85
    LT   shift, and go to state 86
    GT   shift, and go to state 87
    LE   shift, and go to state 88
    GE   shift, and go to state 89

    comparison  go to state 92


state 73

   50 insert_val_list: '(' . column_value_list ')'

    NUMBER  shift, and go to state 66
    STRING  shift, and go to state 68

    column_value_list  go to state 93
    column_value       go to state 94


state 74

   49 insert: INSERT INTO table_name VALUES insert_val_list .
   51 insert_val_list: insert_val_list . ',' '(' column_value_list ')'

    ','  shift, and go to state 95

    $default  reduce using rule 49 (insert)


state 75

   37 select: SELECT '*' FROM table_name opt_where .

    $default  reduce using rule 37 (select)


state 76

   18 create: CREATE INDEX index_name ON table_name '(' . column_name ')'

    NAME  shift, and go to state 67

    column_name  go to state 96


state 77

   27 data_type: CHAR .
   28          | CHAR . '(' NUMBER ')'

    '('  shift, and go to state 97

    $default  reduce using rule 27 (data_type)


state 78

   30 data_type: FLOAT . INTEGER

    INTEGER  shift, and go to state 98


state 79

   29 data_type: INTEGER .

    $default  reduce using rule 29 (data_type)


state 80

   26 column_def: NAME data_type . column_def_opt

    PRIMARY  shift, and go to state 99
    UNIQUE   shift, and go to state 100

    $default  reduce using rule 31 (column_def_opt)

    column_def_opt  go to state 101


state 81

   34 table_constraint_def: PRIMARY KEY . '(' NAME ')'

    '('  shift, and go to state 102


state 82

   17 create: CREATE TABLE table_name '(' create_table_element_list ')' .

    $default  reduce using rule 17 (create)


state 83

   23 create_table_element_list: create_table_element_list ',' . create_table_element

    NAME     shift, and go to state 60
    PRIMARY  shift, and go to state 61

    create_table_element  go to state 103
    column_def            go to state 64
    table_constraint_def  go to state 65


state 84

   43 comparison: EQ .

    $default  reduce using rule 43 (comparison)


state 85

   44 comparison: NEQ .

    $default  reduce using rule 44 (comparison)


state 86

   45 comparison: LT .

    $default  reduce using rule 45 (comparison)


state 87

   46 comparison: GT .

    $default  reduce using rule 46 (comparison)


state 88

   47 comparison: LE .

    $default  reduce using rule 47 (comparison)


state 89

   48 comparison: GE .

    $default  reduce using rule 48 (comparison)


state 90

   42 expr: column_name comparison . column_value

    NUMBER  shift, and go to state 66
    STRING  shift, and go to state 68

    column_value  go to state 104


state 91

   40 expr_list: expr AND . expr

    NUMBER  shift, and go to state 66
    NAME    shift, and go to state 67
    STRING  shift, and go to state 68

    column_name   go to state 69
    expr          go to state 105
    column_value  go to state 72


state 92

   41 expr: column_value comparison . column_name

    NAME  shift, and go to state 67

    column_name  go to state 106


state 93

   50 insert_val_list: '(' column_value_list . ')'
   53 column_value_list: column_value_list . ',' column_value

    ')'  shift, and go to state 107
    ','  shift, and go to state 108


state 94

   52 column_value_list: column_value .

    $default  reduce using rule 52 (column_value_list)


state 95

   51 insert_val_list: insert_val_list ',' . '(' column_value_list ')'

    '('  shift, and go to state 109


state 96

   18 create: CREATE INDEX index_name ON table_name '(' column_name . ')'

    ')'  shift, and go to state 110


state 97

   28 data_type: CHAR '(' . NUMBER ')'

    NUMBER  shift, and go to state 111


state 98

   30 data_type: FLOAT INTEGER .

    $default  reduce using rule 30 (data_type)


state 99

   32 column_def_opt: PRIMARY . KEY

    KEY  shift, and go to state 112


state 100

   33 column_def_opt: UNIQUE .

    $default  reduce using rule 33 (column_def_opt)


state 101

   26 column_def: NAME data_type column_def_opt .

    $default  reduce using rule 26 (column_def)


state 102

   34 table_constraint_def: PRIMARY KEY '(' . NAME ')'

    NAME  shift, and go to state 113


state 103

   23 create_table_element_list: create_table_element_list ',' create_table_element .

    $default  reduce using rule 23 (create_table_element_list)


state 104

   42 expr: column_name comparison column_value .

    $default  reduce using rule 42 (expr)


state 105

   40 expr_list: expr AND expr .

    $default  reduce using rule 40 (expr_list)


state 106

   41 expr: column_value comparison column_name .

    $default  reduce using rule 41 (expr)


state 107

   50 insert_val_list: '(' column_value_list ')' .

    $default  reduce using rule 50 (insert_val_list)


state 108

   53 column_value_list: column_value_list ',' . column_value

    NUMBER  shift, and go to state 66
    STRING  shift, and go to state 68

    column_value  go to state 114


state 109

   51 insert_val_list: insert_val_list ',' '(' . column_value_list ')'

    NUMBER  shift, and go to state 66
    STRING  shift, and go to state 68

    column_value_list  go to state 115
    column_value       go to state 94


state 110

   18 create: CREATE INDEX index_name ON table_name '(' column_name ')' .

    $default  reduce using rule 18 (create)


state 111

   28 data_type: CHAR '(' NUMBER . ')'

    ')'  shift, and go to state 116


state 112

   32 column_def_opt: PRIMARY KEY .

    $default  reduce using rule 32 (column_def_opt)


state 113

   34 table_constraint_def: PRIMARY KEY '(' NAME . ')'

    ')'  shift, and go to state 117


state 114

   53 column_value_list: column_value_list ',' column_value .

    $default  reduce using rule 53 (column_value_list)


state 115

   51 insert_val_list: insert_val_list ',' '(' column_value_list . ')'
   53 column_value_list: column_value_list . ',' column_value

    ')'  shift, and go to state 118
    ','  shift, and go to state 108


state 116

   28 data_type: CHAR '(' NUMBER ')' .

    $default  reduce using rule 28 (data_type)


state 117

   34 table_constraint_def: PRIMARY KEY '(' NAME ')' .

    $default  reduce using rule 34 (table_constraint_def)


state 118

   51 insert_val_list: insert_val_list ',' '(' column_value_list ')' .

    $default  reduce using rule 51 (insert_val_list)
